# rust-learning

./: todo.md
redis/: Cargo.toml  spec.md
redis-client/: Cargo.toml
redis-client/src/: connection.rs  frame.rs  lib.rs  main.rs  parse.rs
redis/src/: lib.rs  main.rs  parse.rs
task-mgr/: Cargo.toml  spec.md  tasks.json
task-mgr/src/: fs.rs  lib.rs  main.rs
task-mgr/src/actions/: create.rs  delete.rs  edit.rs  list.rs
task-mgr/src/core/: domain.rs
task-mgr/src/fs/: local.rs  port.rs
task-mgr/src/test_support/: memory.rs
task-mgr/tests/: integration_test.rs
