[package]
name = "task-mgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"
